# Sparkle

./: .bzrignore  .clang-format  .gitignore  .gitmodules  .swiftlint.yml  .travis.yml  Autoupdate-Info.plist  Autoupdate.m  BUILD.gn  CHANGELOG  CODE_OF_CONDUCT.md  Carthage-dev.json  DevMateSparkle.h  DevMateSparkle.pch  INSTALL  INSTALL.markdown  Info.plist  LICENSE  License.txt  Makefile  Makefile-icon  NSApplication+AppCopies.m  NSBundle+SUAdditions.h  NSBundle+SUAdditions.m  NSFileManager+Aliases.h  NSFileManager+Aliases.m  NSFileManager+Authentication.h  NSFileManager+Authentication.m  NSFileManager+ExtendedAttributes.h  NSFileManager+ExtendedAttributes.m  NSFileManager+Verification.h  NSFileManager+Verification.m  NSNumber+Units.h  NSNumber+Units.m  NSString+extras.h  NSString+extras.m  NSURL+Parameters.m  NSWorkspace+SystemVersion.h  NSWorkspace+SystemVersion.m  NSWorkspace_RBAdditions.h  (+127 more)
.build/: manifest.db
.github/: pull_request_template.md
AppcastDownloader/: Info.plist  SUAppcastDownloader.h  SUAppcastDownloader.m  SUAppcastDownloaderProtocol.h  main.m
Autoupdate/: AgentConnection.h  AgentConnection.m  AppInstaller.h  AppInstaller.m  SPUDeltaArchive.h  SPUDeltaArchive.m  SPUDeltaArchiveProtocol.h  SPUDeltaCompressionMode.h  SPUInstallationInfo.h  SPUInstallationInfo.m  SPUInstallationInputData.h  SPUInstallationInputData.m  SPUInstallerProtocol.h  SPUInstallerValidation.h  SPUInstallerValidation.m  SPUMessageTypes.h  SPUMessageTypes.m  SPUSparkleDeltaArchive.h  SPUSparkleDeltaArchive.m  SPUXarDeltaArchive.h  SPUXarDeltaArchive.m  SUBinaryDeltaApply.m  SUBinaryDeltaCommon.h  SUBinaryDeltaCommon.m  SUBinaryDeltaCreate.h  SUBinaryDeltaCreate.m  SUBinaryDeltaTool.m  SUBinaryDeltaUnarchiver.h  SUBinaryDeltaUnarchiver.m  SUCodeSigningVerifier.h  SUCodeSigningVerifier.m  SUDSAVerifier.h  SUDSAVerifier.m  SUDiskImageUnarchiver.h  SUDiskImageUnarchiver.m  SUFlatPackageUnarchiver.h  SUFlatPackageUnarchiver.m  SUGuidedPackageInstaller.h  SUGuidedPackageInstaller.m  SUInstallationInfo.m  (+27 more)
BinaryDelta/: Bridging-Header.h  main.swift
Carbon Support/: SUCarbonAPI.h  SUCarbonUpdater.h  SUCarbonUpdater.m
Configurations/: CommandLineTool-Debug.xcconfig  CommandLineTool-Release.xcconfig  CommandLineTool-Shared.xcconfig  ConfigAppcastDownloader.xcconfig  ConfigAppcastDownloaderDebug.xcconfig  ConfigBinaryDelta.xcconfig  ConfigBinaryDeltaDebug.xcconfig  ConfigBinaryDeltaRelease.xcconfig  ConfigCommon.xcconfig  ConfigCommonCoverage.xcconfig  ConfigCommonDebug.xcconfig  ConfigCommonProject64bit.xcconfig  ConfigCommonProjectUniversalBinary.xcconfig  ConfigCommonRelease.xcconfig  ConfigCommonReleaseHTTP.xcconfig  ConfigDownloader.xcconfig  ConfigDownloaderDebug.xcconfig  ConfigFramework.xcconfig  ConfigFrameworkDebug.xcconfig  ConfigFrameworkRelease.xcconfig  ConfigFrameworkReleaseGCSupport.xcconfig  ConfigGenerateAppcast.xcconfig  ConfigGenerateAppcastDebug.xcconfig  ConfigGenerateAppcastRelease.xcconfig  ConfigGenerateKeys.xcconfig  ConfigGenerateKeysDebug.xcconfig  ConfigGenerateKeysRelease.xcconfig  ConfigInstallerConnection.xcconfig  ConfigInstallerConnectionDebug.xcconfig  ConfigInstallerLauncher.xcconfig  ConfigInstallerLauncherDebug.xcconfig  ConfigInstallerProgress.xcconfig  ConfigInstallerStatus.xcconfig  (+63 more)
(+1278 files in other folders)
